# watersmart

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  requirements.test.txt  setup.cfg
.github/: FUNDING.yml  release-drafter.yml  update_hacs_manifest.py  validate_coverage.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yaml  pytest.yml  release-drafter.yaml  release.yaml  stale.yaml  validate.yml
custom_components/watersmart/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  helpers.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  types.py
custom_components/watersmart/translations/: en.json
script/: bootstrap  cleanup-fixtures  freeze  setup  unfreeze
tests/: conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_helpers.py  test_init.py  test_sensor.py  test_services.py  test_statistics.py
tests/fixtures/: account_number_unmatchable.html  login_error.html  login_refreshtoken.html  login_structure_change_failure.html  login_success.html  login_success_multimeter.html  realtime_api_response.json
tests/snapshots/: test_diagnostics.ambr  test_sensor.ambr  test_services.ambr
